# adaptive-rag-workbench

backend/: .dockerignore  Dockerfile  pyproject.toml  pytest.ini
backend/tests/: conftest.py  test_api.py  test_api_extended.py  test_app.py  test_app_config.py  test_database.py  test_middleware.py
frontend/: .dockerignore  Dockerfile  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.css  App.tsx  index.css
frontend/src/components/: CitigroupLogo.tsx  MicrosoftLogo.tsx
frontend/src/hooks/: useChatStream.ts
frontend/src/pages/: AdaptiveKBManagement.tsx  ContextAwareGeneration.tsx
